--- a/public/hello.html
+++ b/public/hello.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Hello, World</h1>
 <p>How are you?</p>
-<!-- Author: Alena Ahiyevich -->
+<!-- Author: Alena Ahiyevich (ahiyevichelena@gmail.com)-->
 </body>
 </html>
